--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "howler": "^2.2.3",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.18.0",
     "sirv-cli": "^2.0.0",
